Added prettier and parcel-bundler as peer dep

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.1.0",
         "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-prettier": "^3.0.1"
+        "eslint-plugin-prettier": "^3.0.1",
+        "prettier": "^1.16.4"
+    },
+    "peerDependencies": {
+        "parcel-bundler": "^1.0.0"
     }
 }
