--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "parcel-plugin-structurize",
     "version": "1.0.0",
-    "main": "index.js",
     "license": "MIT",
+    "main": "src/index.js",
+    "engines": {
+        "node": ">=8",
+        "parcel": ">1"
+    },
     "devDependencies": {
         "babel-eslint": "^10.0.1",
         "eslint": "^5.16.0",
@@ -13,5 +17,12 @@
     },
     "peerDependencies": {
         "parcel-bundler": "^1.0.0"
+    },
+    "dependencies": {
+        "chalk": "^2.4.2",
+        "css-url-rewrite": "^0.9.0",
+        "glob": "^7.1.3",
+        "glob-move": "^1.0.1",
+        "jsdom": "^14.0.0"
     }
 }
