--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
     "name": "parcel-plugin-structurize",
-    "version": "1.0.0",
+    "version": "0.0.0",
+    "author": "Samrith Shankar <samrith@outlook.com> (https://twitter.com/tueieo)",
     "license": "MIT",
     "main": "src/index.js",
-    "engines": {
-        "node": ">=8",
-        "parcel": ">1"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/samrith-s/parcel-plugin-structurize.git"
     },
+    "bugs": {
+        "url": "https://github.com/samrith-s/parcel-plugin-structurize/issues"
+    },
+    "homepage": "https://github.com/samrith-s/parcel-plugin-structurize#readme",
+    "engines": {
+        "node": ">=8"
+    },
+    "keywords": [
+        "parcel",
+        "plugin",
+        "structure",
+        "build",
+        "folders"
+    ],
     "devDependencies": {
         "babel-eslint": "^10.0.1",
         "eslint": "^5.16.0",
