--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "homepage": "https://github.com/samrith-s/parcel-plugin-structurize#readme",
     "engines": {
-        "node": ">=8"
+        "node": ">=12"
     },
     "keywords": [
         "parcel",
@@ -23,15 +23,19 @@
         "folders"
     ],
     "scripts": {
-        "lint": "eslint --fix-dry-run src/**/*.js"
+        "lint": "eslint --fix-dry-run src/**/*.js",
+        "build": "tsc -p .",
+        "dev": "tsc -w ."
     },
     "devDependencies": {
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.16.0",
-        "eslint-config-prettier": "^4.1.0",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-prettier": "^3.0.1",
-        "prettier": "^1.16.4"
+        "@typescript-eslint/eslint-plugin": "^3.9.1",
+        "@typescript-eslint/parser": "^3.9.1",
+        "eslint": "^7.7.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "prettier": "^1.16.4",
+        "typescript": "^3.9.7"
     },
     "peerDependencies": {
         "parcel-bundler": "^1.0.0"
