--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,18 @@
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules"],
     "compilerOptions": {
-        "rootDir": "src",
+        "rootDir": ".",
         "outDir": "lib",
         "declaration": true,
         "declarationDir": "lib/types",
-        "baseUrl": ".",
-        "module": "commonjs",
-        "target": "ES3"
+        "baseUrl": "./src",
+        "module": "ESNext",
+        "target": "es5",
+        "lib": ["es6", "dom", "es2016", "es2017"],
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "incremental": true,
+        "moduleResolution": "node"
     }
 }
