--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "parcel-plugin-structurize",
-    "version": "1.2.0",
+    "version": "2.0.0-alpha.0",
     "author": "Samrith Shankar <samrith@outlook.com> (https://twitter.com/tueieo)",
     "license": "MIT",
     "main": "lib/index.js",
