--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "folders"
     ],
     "scripts": {
+        "prepublishOnly": "yarn build",
         "lint": "eslint --fix-dry-run src/**/*.js",
         "build": "rimraf lib && rollup -c",
         "dev": "tsc -w ."
