--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "prepublishOnly": "yarn build",
         "lint": "eslint --fix-dry-run src/**/*.js",
         "build": "rimraf lib && rollup -c",
-        "dev": "tsc -w ."
+        "start": "chokidar src/**/*.ts -c 'yarn build'"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^15.0.0",
@@ -40,6 +40,7 @@
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@types/jsdom": "^16.2.3",
         "@types/node": "^14.6.0",
+        "@types/parcel-bundler": "^1.12.1",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
         "builtin-modules": "^3.1.0",
@@ -47,6 +48,7 @@
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-vue": "^6.2.2",
         "prettier": "^1.16.4",
         "rimraf": "^3.0.2",
         "rollup": "^2.26.3",
@@ -59,6 +61,7 @@
     "dependencies": {
         "chalk": "^2.4.2",
         "css-url-rewrite": "^0.9.0",
+        "dependency-graph": "^0.9.0",
         "glob": "^7.1.3",
         "glob-move": "^1.0.1",
         "jsdom": "^14.0.0"
