--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
         "folders"
     ],
     "scripts": {
+        "bootstrap": "./scripts/prepare-bundles.sh",
         "prepublishOnly": "yarn build",
         "lint": "eslint --fix-dry-run src/**/*.js",
         "build": "rimraf lib && rollup -c",
-        "start": "chokidar src/**/*.ts -c 'yarn build'"
+        "start": "chokidar src/**/*.ts -c \"yarn build\"",
+        "dev": "rimraf lib && rollup -c -w"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^15.0.0",
@@ -44,11 +46,13 @@
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
         "builtin-modules": "^3.1.0",
+        "chokidar": "^3.4.2",
         "eslint": "^7.7.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-vue": "^6.2.2",
+        "parcel-bundler": "^1.12.4",
         "prettier": "^1.16.4",
         "rimraf": "^3.0.2",
         "rollup": "^2.26.3",
