chore(deps): updated bundle deps

--- a/bundles/bundle-vue/package.json
+++ b/bundles/bundle-vue/package.json
@@ -8,11 +8,11 @@
     "private": true,
     "scripts": {
         "build": "rimraf dist && parcel build src/index.html",
-        "dev": "chokidar ../../lib/**/* -c 'yarn build'"
+        "dev": "chokidar ../../lib/**/*.js -c 'yarn build'"
     },
     "devDependencies": {
         "@vue/component-compiler-utils": "^3.2.0",
-        "chokidar": "file:../../node_modules/chokidar",
+        "chokidar-cli": "file:../../node_modules/chokidar-cli",
         "parcel-bundler": "file:../../node_modules/parcel-bundler",
         "parcel-plugin-structurize": "file:./node_modules/parcel-plugin-structurize",
         "pug": "^3.0.0",
