--- a/bundles/bundle-html/package.json
+++ b/bundles/bundle-html/package.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "build": "rimraf dist && parcel build src/index.html"
+        "build": "rimraf dist && parcel build src/index.html",
+        "dev": "chokidar ../../lib/**/*.js -c 'yarn build'"
     },
     "devDependencies": {
+        "chokidar-cli": "file:../../node_modules/chokidar-cli",
         "parcel-bundler": "file:../../node_modules/parcel-bundler",
         "parcel-plugin-structurize": "file:./node_modules/parcel-plugin-structurize",
         "sass": "^1.26.10"
