--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
         "prepublishOnly": "yarn build",
         "lint": "eslint --fix-dry-run src/**/*.js",
         "build": "rimraf lib && rollup -c",
-        "start": "chokidar src/**/*.ts -c \"yarn build\"",
         "dev": "rimraf lib && rollup -c -w"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^15.0.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
+        "@types/cosmiconfig": "^6.0.0",
         "@types/jsdom": "^16.2.3",
         "@types/node": "^14.6.0",
         "@types/parcel-bundler": "^1.12.1",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
         "builtin-modules": "^3.1.0",
-        "chokidar": "^3.4.2",
+        "chokidar-cli": "^2.1.0",
         "eslint": "^7.7.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.22.0",
@@ -64,8 +64,8 @@
     },
     "dependencies": {
         "chalk": "^2.4.2",
+        "cosmiconfig": "^7.0.0",
         "css-url-rewrite": "^0.9.0",
-        "dependency-graph": "^0.9.0",
         "glob": "^7.1.3",
         "glob-move": "^1.0.1",
         "jsdom": "^14.0.0"
