--- a/package.json
+++ b/package.json
@@ -65,9 +65,6 @@
     "dependencies": {
         "chalk": "^2.4.2",
         "cosmiconfig": "^7.0.0",
-        "css-url-rewrite": "^0.9.0",
-        "glob": "^7.1.3",
-        "glob-move": "^1.0.1",
-        "jsdom": "^14.0.0"
+        "minimatch": "^3.0.4"
     }
 }
