--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "dependencies": {
         "chalk": "^2.4.2",
         "cosmiconfig": "^7.0.0",
-        "minimatch": "^3.0.4"
+        "minimatch": "^3.0.4",
+        "sanitize-filename": "^1.6.3"
     }
 }
