--- a/package.json
+++ b/package.json
@@ -63,9 +63,10 @@
         "parcel-bundler": "^1.0.0"
     },
     "dependencies": {
-        "chalk": "^2.4.2",
+        "chalk": "^4.1.0",
         "cosmiconfig": "^7.0.0",
         "minimatch": "^3.0.4",
+        "move-file": "^2.0.0",
         "sanitize-filename": "^1.6.3"
     }
 }
