--- a/bundles/bundle-vue/package.json
+++ b/bundles/bundle-vue/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "vue-hot-reload-api": "^2.3.4"
     }
 }
