--- a/package.json
+++ b/package.json
@@ -33,18 +33,24 @@
         "prepublishOnly": "yarn build",
         "lint": "eslint --fix-dry-run src/**/*.ts",
         "build": "rimraf lib && rollup -c",
-        "dev": "rimraf lib && NODE_ENV=development rollup -c -w"
+        "dev": "rimraf lib && NODE_ENV=development rollup -c -w",
+        "test": "jest"
     },
     "devDependencies": {
+        "@babel/core": "^7.11.4",
+        "@babel/preset-env": "^7.11.0",
+        "@babel/preset-typescript": "^7.10.4",
         "@rollup/plugin-commonjs": "^15.0.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@types/cosmiconfig": "^6.0.0",
+        "@types/jest": "^26.0.10",
         "@types/jsdom": "^16.2.3",
         "@types/node": "^14.6.0",
         "@types/parcel-bundler": "^1.12.1",
         "@typescript-eslint/eslint-plugin": "^3.9.1",
         "@typescript-eslint/parser": "^3.9.1",
+        "babel-jest": "^26.3.0",
         "builtin-modules": "^3.1.0",
         "chokidar-cli": "^2.1.0",
         "eslint": "^7.7.0",
@@ -52,11 +58,14 @@
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-vue": "^6.2.2",
+        "jest": "^26.4.1",
+        "jest-environment-node": "^26.3.0",
         "parcel-bundler": "^1.12.4",
         "prettier": "^1.16.4",
         "rimraf": "^3.0.2",
         "rollup": "^2.26.3",
         "rollup-plugin-typescript2": "^0.27.2",
+        "ts-jest": "^26.2.0",
         "typescript": "^3.9.7"
     },
     "peerDependencies": {
