--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${ matrix.os }
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
@@ -24,9 +24,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Install
+      run: yarn install
     - name: Lint
       run: yarn lint
     - name: Build
       run: yarn build
     - name: Test
-      run: yarn test
+      run: yarn bootstrap && yarn test
