--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,11 +24,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Bootstrap
-      run: yarn bootstrap
+    - name: Install
+      run: yarn install
     - name: Lint
       run: yarn lint
     - name: Build
       run: yarn build
     - name: Test
-      run: yarn test
+      run: yarn bootstrap && yarn test
