chore: updated workflow to fix issues

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,31 +4,31 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+    build:
+        runs-on: ${{ matrix.os }}
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [12.x, 13.x, 14.x]
+        strategy:
+            matrix:
+                os: [ubuntu-latest, macos-latest, windows-latest]
+                node-version: [12.x, 13.x, 14.x]
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run for Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install
-      run: yarn install
-    - name: Lint
-      run: yarn lint
-    - name: Build
-      run: yarn build
-    - name: Test
-      run: yarn bootstrap && yarn test
+        steps:
+            - uses: actions/checkout@v2
+            - name: Run for Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - name: Install
+              run: yarn install
+            - name: Lint
+              run: yarn lint
+            - name: Build
+              run: yarn build
+            - name: Test
+              run: yarn bootstrap:test && yarn test
