--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     },
     "devDependencies": {
         "@babel/core": "^7.11.4",
-        "@babel/preset-env": "^7.11.0",
         "@babel/preset-typescript": "^7.10.4",
         "@rollup/plugin-commonjs": "^15.0.0",
         "@rollup/plugin-json": "^4.1.0",
@@ -71,6 +70,7 @@
         "prettier": "^1.16.4",
         "rimraf": "^3.0.2",
         "rollup": "^2.26.3",
+        "rollup-plugin-terser": "^7.0.1",
         "rollup-plugin-typescript2": "^0.27.2",
         "ts-jest": "^26.2.0",
         "typescript": "^3.9.7"
