--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "devDependencies": {
         "@babel/core": "^7.11.4",
         "@babel/preset-typescript": "^7.10.4",
+        "@commitlint/cli": "^9.1.2",
+        "@commitlint/config-conventional": "^9.1.2",
         "@rollup/plugin-commonjs": "^15.0.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
@@ -68,6 +70,7 @@
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-vue": "^6.2.2",
+        "husky": "^4.3.0",
         "is-image": "^3.0.0",
         "jest": "^26.4.1",
         "jest-environment-node": "^26.3.0",
@@ -77,6 +80,7 @@
         "rollup": "^2.26.3",
         "rollup-plugin-terser": "^7.0.1",
         "rollup-plugin-typescript2": "^0.27.2",
+        "standard-version": "^9.0.0",
         "ts-jest": "^26.2.0",
         "typescript": "^3.9.7"
     },
