chore: updated commitlint to only show features and bugs

--- a/.versionrc
+++ b/.versionrc
@@ -10,7 +10,7 @@
         },
         {
             "type": "docs",
-            "section": "Documentation"
+            "hidden": true
         },
         {
             "type": "chore",
