--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@types/cosmiconfig": "^6.0.0",
+        "@types/delete-empty": "^3.0.0",
         "@types/jest": "^26.0.10",
         "@types/jsdom": "^16.2.3",
         "@types/node": "^14.6.0",
@@ -89,6 +90,7 @@
     "dependencies": {
         "chalk": "^4.1.0",
         "cosmiconfig": "^7.0.0",
+        "delete-empty": "^3.0.0",
         "minimatch": "^3.0.4",
         "move-file": "^2.0.0",
         "sanitize-filename": "^1.6.3"
