chore: update workflow to install deps before bundle

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
             - uses: actions/setup-node@v1
               with:
                   node-version: '14'
-            - run: yarn install
+            - run: yarn install --frozen-lockfile
             - run: yarn lint
 
     build:
@@ -27,7 +27,7 @@ jobs:
             - uses: actions/setup-node@v1
               with:
                   node-version: '14'
-            - run: yarn install
+            - run: yarn install --frozen-lockfile
             - run: yarn build
 
     bundle:
@@ -42,6 +42,7 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
+            - run: yarn install --frozen-lockfile
             - run: yarn test:bundle
 
     test:
